--- a/index.html
+++ b/index.html
@@ -1,31 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growth App</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
-      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
-    <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&amp;display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   </head>
   <body>
     <nav class="navbar">
       <div class="container">
         <div class="logo">
           <a href="index.html">
-            <img src="images/logo.png" alt="logo" />
+            <img src="images/logo.png" alt="logo">
           </a>
         </div>
 
@@ -73,18 +62,11 @@
     <section class="hero">
       <div class="container">
         <div class="hero-content">
-          <h1 class="hero-heading text-xxl">
-            A powerful solution to grow your startup. Fast!
-          </h1>
-          <p class="hero-text">
-            Organize, collaborate, and track progress seamlessly with our
-            one-stop-shop startup growth tool.
-          </p>
+          <h1 class="hero-heading text-xxl">💜 This is a test!</h1>
+          <p class="hero-text" style="font-style: italic; text-decoration: underline; color: red;">The new way to web dev</p>
           <div class="hero-buttons">
             <a href="#" class="btn btn-primary">Get Started</a>
-            <a href="#" class="btn"
-              ><i class="fas fa-laptop"></i> Book a Demo</a
-            >
+            <a href="#" class="btn"><i class="fas fa-laptop"></i> Book a Demo</a>
           </div>
         </div>
       </div>
@@ -97,11 +79,7 @@
         </h2>
         <div class="video-content">
           <a href="#">
-            <img
-              src="images/video-preview.png"
-              alt="video"
-              class="video-preview"
-            />
+            <img src="images/video-preview.png" alt="video" class="video-preview">
           </a>
 
           <a href="#" class="btn btn-primary">Get Started</a>
@@ -336,7 +314,7 @@
         <div class="footer-grid">
           <div>
             <a href="index.html">
-              <img src="images/logo-white.png" alt="logo" />
+              <img src="images/logo-white.png" alt="logo">
             </a>
             <div class="card">
               <h4>Subscribe to Newsletter</h4>
@@ -345,7 +323,7 @@
                 the next level.
               </p>
               <form>
-                <input type="email" id="email" placeholder="Enter your email" />
+                <input type="email" id="email" placeholder="Enter your email">
                 <button type="submit" class="btn btn-primary btn-block">
                   Subscribe
                 </button>
@@ -383,5 +361,8 @@
     </footer>
 
     <script src="js/main.js"></script>
-  </body>
-</html>
+  
+
+  
+
+    </body></html>
