--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
+<!DOCTYPE html><html xmlns="http://www.w3.org/1999/xhtml" lang="en"><head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer"><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Growth App</title>
@@ -62,7 +62,7 @@
     <section class="hero">
       <div class="container">
         <div class="hero-content">
-          <h1 class="hero-heading text-xxl">💜 This is a test!</h1>
+          <h1 class="hero-heading text-xxl">Manu</h1>
           <p class="hero-text" style="font-style: italic; text-decoration: underline; color: red;">The new way to web dev</p>
           <div class="hero-buttons">
             <a href="#" class="btn btn-primary">Get Started</a>
@@ -74,9 +74,7 @@
     <!-- Video Section -->
     <section class="video bg-black">
       <div class="container-sm">
-        <h2 class="video-heading text-xl text-center">
-          See how it works and get started in less than 2 minutes
-        </h2>
+        <h2 class="video-heading text-xl text-center">Hello world!!2</h2>
         <div class="video-content">
           <a href="#">
             <img src="images/video-preview.png" alt="video" class="video-preview">
@@ -364,5 +362,7 @@
   
 
   
+
+      
 
     </body></html>
